@@ -13,7 +13,7 @@
   border: 1px solid #AAA;
   color: #333;
   float: right;
-  font: italic 1em Georgia, "Times New Roman", Times, serif;
+  font: italic 1.1em Georgia, "Times New Roman", Times, serif;
   line-height: 1.7em;
   margin: 1em 0 0.4em 1em;
   padding: 1em;
@@ -27,9 +27,21 @@
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
-.pullquote-quote:after {
+
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
+}
+
+.pullquote-quote .attribution:before {
+  content: "\2014";
+}
+
+.pullquote-quote .attribution {
+  text-transform: uppercase;
+  font-size: .8em;
+  font-style: normal;
+  float: right;
 }
