@@ -9,28 +9,32 @@
 
 .pullquote-quote {
   z-index:1;
-  background: #E8E8E8;
-  border: 1px solid #AAA;
   float: right;
-  font: 0.8em Arial, Helvetica, sans-serif;
-  line-height: 125%;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+  font-size: 1.8em;
+  line-height: 200%;
   margin: 1em 0 0.4em 1em;
   padding: .25em .75em;
-  color: #333;
+  color: #698fb4;
   width: 33%;
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
-  content: open-quote;
-}
-
-.pullquote-quote:after {
-  content: close-quote;
-}
 
 .pullquote-quote.pullquote-left {
   float: left;
   margin-left: 0;
   margin-right: 1em;
+}
+
+.pullquote-quote .attribution {
+  float: left;
+  text-align:center;
+  padding-top: 20px;
+  font-size: .8em;
+  font-variant: small-caps;
+}
+
+.pullquote-quote .attribution:before {
+  content: "\2014";
 }
