@@ -22,11 +22,11 @@
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
@@ -34,4 +34,14 @@
   float: left;
   margin-left: 0;
   margin-right: 1em;
+}
+
+.pullquote-quote .attribution:before {
+  content: "~";
+}
+
+.pullquote-quote .attribution {
+  float: right;
+  text-align:center;
+  padding-top: 20px;
 }
