@@ -22,11 +22,11 @@
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
@@ -34,4 +34,17 @@
   float: left;
   margin-left: 0;
   margin-right: 1em;
+}
+
+.pullquote-quote .attribution {
+  line-height: 300%;
+  font-style: normal;
+  color: gray;
+}
+
+.pullquote-quote .attribution:before {
+  content: "\2014";
+}
+.pullquote-quote .attribution:after {
+  content: "\2014";
 }
