@@ -21,11 +21,11 @@
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
@@ -33,4 +33,13 @@
   float: left;
   margin-left: 0;
   margin-right: 1em;
+}
+
+.pullquote-quote .attribution {
+  float: left;
+  padding-top: 15px;
+}
+
+.pullquote-quote .attribution:before {
+  content: "\2014";
 }
