@@ -22,15 +22,21 @@
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
 .pullquote-quote.pullquote-left {
   margin: 1em 1em 0.4em 0em;
   float: left;
+}
+
+.pullquote-quote .attribution {
+  float: right;
+  font-weight: normal;
+  font-size: .9em;
 }
