@@ -21,11 +21,11 @@
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
@@ -34,4 +34,11 @@
   margin-left: 0em;
   margin-right: 1em;
   border-width: 2px 10px 0 0;
+}
+
+.pullquote-quote .attribution {
+  float: right;
+  font-style: normal;
+  font-size: 90%;
+  padding-top: 10px;
 }
