@@ -17,16 +17,16 @@
   font: italic 130% Arial, Helvetica, sans-serif;
   line-height: 125%;
   margin: 1em 0 0.4em 1em;
-  padding: 0 8px;
+  padding: 10px 8px 10px 15px;
   width: 30%;
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
@@ -35,4 +35,14 @@
   margin-left: 0;
   margin-right: 1em;
   border-width: 1px 10px 1px 0;
+}
+
+.pullquote-quote .attribution:before {
+  content: "\2014";
+}
+
+.pullquote-quote .attribution {
+  float: right;
+  font-style: normal;
+  font-size: 80%;
 }
