@@ -17,16 +17,16 @@
   font: italic 110% "Trebuchet MS", "Lucida Grande", sans-serif;
   line-height: 125%;
   margin: 1em 0 0.4em 1em;
-  padding: 0 8px;
+  padding: 10px 8px;
   width: 33%;
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
@@ -34,4 +34,12 @@
   float: left;
   margin-left: 0;
   margin-right: 1em;
+}
+
+.pullquote-quote .attribution {
+  float: right;
+  text-align:center;
+  font-style: normal;
+  font-size: 70%;
+  color:#666666;
 }
