@@ -13,7 +13,7 @@
   border: 7px double #272B4F;
   border-width: 0 5px;  color: #303030;
   float: right;
-  font: italic 130% "Times New Roman", Times, serif;
+  font: italic 150% "Times New Roman", Times, serif;
   line-height: 125%;
   margin: 1em 0 0.4em 1em;
   padding: .25em .75em;
@@ -21,11 +21,11 @@
 }
 
 /* inserts quotation marks around pullquoted text */
-.pullquote-quote:before {
+.pullquote-quote .pullquote-content:before {
   content: open-quote;
 }
 
-.pullquote-quote:after {
+.pullquote-quote .pullquote-content:after {
   content: close-quote;
 }
 
@@ -33,4 +33,17 @@
   float: left;
   margin-left: 0;
   margin-right: 1em;
+}
+
+.pullquote-quote .attribution:before {
+  content: "\2014";
+}
+
+.pullquote-quote .attribution {
+  float: left;
+  text-align:center;
+  padding-top: 20px;
+  font-style: normal;
+  font-size: 70%;
+  color:gray;
 }
