@@ -1,7 +1,8 @@
 name = Pullquote
-description = Creates a pullquote from selected area(s) in text. This is done through JavaScript and duplicates the marked-up text as seperately CSS formatted quotation
+description = Creates a pullquote from selected area(s) in text. This is done through JavaScript and duplicates the marked-up text as a seperately CSS formatted quotation.
 core = 7.x
 configure = admin/config/content/pullquote
+package = Content Display
 
 
 ; Information added by drush on 2013-09-23
@@ -9,4 +10,3 @@ version = "7.x-2.1"
 core = "7.x"
 project = "pullquote"
 datestamp = "1379959927"
-
